Update package and package-lock files

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,18 @@
   "author": "Hunain Qureshi",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.11.0"
+    "class-validator": "^0.11.0",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "pg": "^7.14.0",
+    "reflect-metadata": "^0.1.13",
+    "tsconfig-paths": "^3.9.0",
+    "typeorm": "^0.2.21"
   },
   "devDependencies": {
     "@types/koa": "^2.0.52",
+    "@types/node": "^12.12.18",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
     "eslint": "^6.6.0",
